--- a/src/Avanti.OrderWarehouseService/Avanti.OrderWarehouseService.csproj
+++ b/src/Avanti.OrderWarehouseService/Avanti.OrderWarehouseService.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <DebugType>full</DebugType>
     <AssemblyName>Avanti.OrderWarehouseService</AssemblyName>
     <PackageId>ProcessingService</PackageId>
@@ -23,10 +23,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avanti.Core.EventStream.Azure" Version="1.0.3-beta-g22df1f2b7b" />
-    <PackageReference Include="Avanti.Core.KeyStore.Azure" Version="1.0.0-beta-g38c5ea12f6" />
-    <PackageReference Include="Avanti.Core.Microservice" Version="1.1.0-beta-ga528ea29f7" />
-    <PackageReference Include="Avanti.Core.Http" Version="1.0.0-beta-g7345bd861c" />
-    <PackageReference Include="Avanti.Core.RelationalData.PostgreSQL" Version="1.0.1-beta-g6589e419a4" />
+    <PackageReference Include="Avanti.Core.EventStream.Azure" Version="1.0.3-g41832fdc51" />
+    <PackageReference Include="Avanti.Core.KeyStore.Azure" Version="1.0.0-g37f9aaebcf " />
+    <PackageReference Include="Avanti.Core.Microservice" Version="1.2.0-g78ea952c75" />
+    <PackageReference Include="Avanti.Core.RelationalData.PostgreSQL" Version="1.1.0-gd7936da2b3" />
+    <PackageReference Include="Avanti.Core.Http" Version="1.0.0-gff1a459ebe" />
   </ItemGroup>
 </Project>
