Added metadata endpoints

--- a/avanti-service.yaml
+++ b/avanti-service.yaml
@@ -11,6 +11,8 @@ main:
   httpPort: 5000
   clusterPort: 2552
   team: platform
+  metadataEndpoint: /private/metadata
+  eventMetadataEndpoint: /private/event/metadata
   authorization:
     requiredClaims:
       azp: applications
