--- a/src/Avanti.OrderWarehouseService/Avanti.OrderWarehouseService.csproj
+++ b/src/Avanti.OrderWarehouseService/Avanti.OrderWarehouseService.csproj
@@ -29,6 +29,6 @@
     <PackageReference Include="Avanti.Core.KeyStore.Azure" Version="1.1.1-gb273be2f25" />
     <PackageReference Include="Avanti.Core.Microservice" Version="1.6.3-gabda11822b" />
     <PackageReference Include="Avanti.Core.RelationalData.PostgreSQL" Version="1.3.1-gc46e46d11a" />
-    <PackageReference Include="Avanti.Core.Http" Version="1.1.0-beta-gd59e1f1654" />
+    <PackageReference Include="Avanti.Core.Http" Version="1.1.1-gea915ac170" />
   </ItemGroup>
 </Project>
